# sympycpp

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  factories.h  functions.h  lexer.h  node.h  parser.h  sympycpp_parser.h  token.h
src/: CMakeLists.txt  parser.cpp  sympycpp_parser.cpp
test/: CMakeLists.txt  README.md  test_main.cpp  test_sympycpp_parser.cpp
